tests/baselines/reference/es5ExportEqualsDts(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es5ExportEqualsDts.ts(4,16): error TS2454: Variable 'aVal' is used before being assigned.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es5ExportEqualsDts.ts (1 errors) ====
    class A {
        foo() {
            var aVal: A.B;
            return aVal;
                   ~~~~
!!! error TS2454: Variable 'aVal' is used before being assigned.
        }
    }
    
    namespace A {
        export interface B { }
    }
    
    export = A